# scm-project

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
data/output/: plan_hours.csv  plan_tons.csv  plan_units.csv
init-db/: 01-schema.sql  02-seed-data.sql
src/: config.py  database.py  export.py  main.py  models.py  planner.py
