[project]
name = "scm-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
target-version = "py312"

exclude = [
    ".venv",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
